--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,19 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:hasCode="false">
+
+        <activity android:name="android.app.NativeActivity"
+            android:label="NativeActivity"
+            android:configChanges="orientation|keyboardHidden">
+            <meta-data android:name="android.app.lib_name"
+                android:value="NativeMain"></meta-data>
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"></action>
+                <category android:name="android.intent.category.LAUNCHER"></category>
+            </intent-filter>
+        </activity>
 
     </application>
 
