--- a/app/libs/ogre/OgreMain/CMakeLists.txt
+++ b/app/libs/ogre/OgreMain/CMakeLists.txt
@@ -307,7 +307,8 @@ endif ()
 if (OGRE_CONFIG_ENABLE_FREEIMAGE)
   list(APPEND HEADER_FILES include/OgreFreeImageCodec.h)
   list(APPEND SOURCE_FILES src/OgreFreeImageCodec.cpp)
-  list(APPEND LIBRARIES    "${FreeImage_LIBRARIES}")
+  list(APPEND LIBRARIES    FreeImage)
+  include_directories(${FreeImage_INCLUDE_DIR})
 endif()
 
 if (OGRE_CONFIG_ENABLE_STBI)
