--- a/app/libs/ogre/OgreMain/CMakeLists.txt
+++ b/app/libs/ogre/OgreMain/CMakeLists.txt
@@ -419,6 +419,9 @@ if (APPLE)
   set_target_properties(OgreMain PROPERTIES	OUTPUT_NAME Ogre)
 endif ()
 target_link_libraries(OgreMain ${LIBRARIES})
+#if(ANDROID)
+#target_link_libraries(OgreMain log android)
+#endif()
 if (MINGW)
   # may need winsock htons functions for FreeImage
   target_link_libraries(OgreMain ws2_32)
