--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,14 +5,12 @@ android {
     buildToolsVersion "25.0.0"
     defaultConfig {
         applicationId "com.example.ogretest"
-        minSdkVersion 23
+        minSdkVersion 22
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        ndk {
-            abiFilter 'x86'
-        }
+
         externalNativeBuild {
             cmake {
                 cppFlags "-std=c++11 -frtti -fexceptions"
@@ -58,6 +56,15 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            ndk {
+                abiFilters "x86"
+            }
+        }
+
+        debug {
+            ndk {
+                abiFilters "x86", "armeabi-v7a"
+            }
         }
     }
     externalNativeBuild {
