--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
+    compileSdkVersion 23
     buildToolsVersion "25.0.0"
     defaultConfig {
         applicationId "com.example.ogretest"
         minSdkVersion 22
-        targetSdkVersion 24
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -14,7 +14,7 @@ android {
         externalNativeBuild {
             cmake {
                 cppFlags "-std=c++11 -frtti -fexceptions"
-                arguments "-DANDROID_STL=c++_static","-DANDROID_ARM_MODE=arm",
+                arguments "-DANDROID_STL=c++_static", "-DANDROID_ARM_MODE=arm",
                         "-DOGRE_ASSERT_MODE:STRING=0",
                         "-DOGRE_BUILD_COMPONENT_MESHLODGENERATOR:BOOL=ON",
                         "-DOGRE_BUILD_COMPONENT_OVERLAY:BOOL=ON",
@@ -72,10 +72,12 @@ android {
             path "CMakeLists.txt"
         }
     }
+    productFlavors {
+    }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
