--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,20 +1,19 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "25.0.0"
+    compileSdkVersion 28
+
     defaultConfig {
         applicationId "com.example.ogretest"
         minSdkVersion 22
-        targetSdkVersion 23
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
         externalNativeBuild {
             cmake {
-                cppFlags "-std=c++11 -frtti -fexceptions"
-                arguments "-DANDROID_STL=c++_static", "-DANDROID_ARM_MODE=arm",
+                cppFlags "-std=c++14 -frtti -fexceptions"
+                arguments "-DANDROID_STL=c++_shared", "-DANDROID_ARM_MODE=arm",
                         "-DOGRE_ASSERT_MODE:STRING=0",
                         "-DOGRE_BUILD_COMPONENT_MESHLODGENERATOR:BOOL=ON",
                         "-DOGRE_BUILD_COMPONENT_OVERLAY:BOOL=ON",
@@ -52,20 +51,15 @@ android {
                         "-DOGRE_STATIC:BOOL=OFF"
             }
         }
+
+        ndk {
+            abiFilters "armeabi-v7a", "arm64-v8a"
+        }
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            ndk {
-                abiFilters "armeabi-v7a"
-            }
-        }
-
-        debug {
-            ndk {
-                abiFilters "x86"
-            }
         }
     }
     externalNativeBuild {
@@ -73,15 +67,10 @@ android {
             path "CMakeLists.txt"
         }
     }
-    productFlavors {
-    }
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    compile 'com.android.support:appcompat-v7:25.0.0'
-    testCompile 'junit:junit:4.12'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 }
