--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,10 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-task printGradleVersion {
-    // Get current Gradle version as object.
-    final GradleVersion gradleVersion = GradleVersion.current()
-
-    // Print different properties.
-    println "Your Gradle version is ${gradleVersion.version}"
-}
-
 buildscript {
     repositories {
+        google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.2'
+        classpath 'com.android.tools.build:gradle:3.3.2'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -21,6 +13,7 @@ buildscript {
 
 allprojects {
     repositories {
+        google()
         jcenter()
     }
 }
